# webrtc-audio-demo

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
main/: CMakeLists.txt  Kconfig  audio.c  filters.c  idf_component.yml  main.c  mic.c  speaker.c  webrtc.c  wifi.c
main/includes/: audio.h  filters.h  mic.h  speaker.h  utils.h  webrtc.h  wifi.h
